name: cpython
version: 3.5.1
license: GPL-3
license-file: license.txt
author: John Millikin <jmillikin@gmail.com>
maintainer: Adam Zsigmond <zsedem@gmail.com>
build-type: Simple
cabal-version: 1.18
category: Foreign
homepage: https://github.com/zsedem/haskell-cpython
extra-doc-files:
  changelog.md
  README.md
synopsis: Bindings for libpython
description:
  These bindings allow Haskell code to call CPython code. It is not
  currently possible to call Haskell code from CPython, but this feature
  is planned.

flag usepythonembed
  description:
    Starting with python version 3.8, the correct pkg-config module name
    for linking against libpython needs an additional "-embed" appended.
    See https://docs.python.org/3/whatsnew/3.8.html#debug-build-uses-the-same-abi-as-release-build
    for further information.
  default: True

flag buildghcihack
  description:
    You may safely disable this if you don't want to use this package in GHCi or if your
    platform does not provide "dlopen" functionality.
    Otherwise look in the documentation of module CPython.GhciHack for more information.
  default: True


source-repository head
  type: git
  location: https://github.com/zsedem/haskell-cpython

library
  ghc-options: -Wall -O2 -fno-warn-orphans
  cc-options: -fPIC
  hs-source-dirs: lib

  build-depends:
      base >= 4.0 && < 5.0
    , bytestring >= 0.9
    , text

  build-tools:
    c2hs >= 0.15

  includes:
    cbits/hscpython-shim.h
  install-includes:
    cbits/hscpython-shim.h
  exposed-modules:
    CPython
    CPython.Types
    CPython.Types.ByteArray
    CPython.Types.Bytes
    CPython.Types.Capsule
    CPython.Types.Cell
    CPython.Types.Code
    CPython.Types.Complex
    CPython.Types.Dictionary
    CPython.Types.Exception
    CPython.Types.Float
    CPython.Types.Function
    CPython.Types.InstanceMethod
    CPython.Types.Integer
    CPython.Types.Iterator
    CPython.Types.List
    CPython.Types.Method
    CPython.Types.Module
    CPython.Types.Set
    CPython.Types.Slice
    CPython.Types.Tuple
    CPython.Types.Type
    CPython.Types.Unicode
    CPython.Types.WeakReference
    CPython.Protocols.Iterator
    CPython.Protocols.Mapping
    CPython.Protocols.Number
    CPython.Protocols.Object
    CPython.Protocols.Object.Enums
    CPython.Protocols.Sequence
    CPython.Constants
    CPython.Reflection
    CPython.Simple
    CPython.Simple.Instances
    CPython.System

  if flag(buildghcihack)
    exposed-modules:
      CPython.GhciHack

  other-modules:
    CPython.Internal

  c-sources: cbits/hscpython-shim.c
  include-dirs: cbits

  if flag(usepythonembed)
    pkgconfig-depends: python3-embed
  else
    pkgconfig-depends: python3

  default-language:    Haskell2010

test-suite cpython-testsuite
  type:        exitcode-stdio-1.0
  main-is:     Tests.hs
  ghc-options: -Wall -fno-warn-orphans
  hs-source-dirs: tests

  build-depends:
      base > 4.0 && < 5.0
    , text
    , cpython
  if flag(usepythonembed)
    pkgconfig-depends: python3-embed
  else
    pkgconfig-depends: python3
  default-language:    Haskell2010
